# granite-crm-db

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  alembic.ini  backup_db.bat  cli.py  config.yaml  enrich_jsprav.bat  main.py  propagate.bat  pyproject.toml  requirements.txt  run.bat  run_all.bat
.agents/: rules.md
alembic/: env.py
alembic/versions/: 20260406_191015_ecda7d78a38f_initial_schema.py  20260410_073700_ecda7d78a38f_drop_pipeline_runs.py  20260411_163514_025a08dcc789_add_crm_tables.py
docs/: AGENT_CAPABILITIES.md  DATABASE_GUIDE.md  Granite CRM design system.md  PHASE_2_REPORT.md  crm-web-ui-dev-plan-v6.md  firecrawl-guide.md  granite-crm-audit-guide.md  granite-crm-db-audit-report.md  granite-crm-foundation-guide.md  granite-crm-rollout-plan.md  posting.md  update-templates-tasktypes.md
granite/: __init__.py  category_finder.py  config_validator.py  database.py  http_client.py  models.py  regions.py  utils.py
granite/api/: app.py  campaigns.py  companies.py  deps.py  followup.py  funnel.py  messenger.py  schemas.py  stage_transitions.py  tasks.py  touches.py  tracking.py
granite/dedup/: __init__.py  merger.py  name_matcher.py  phone_cluster.py  validator.py  (+1 more)
scripts/: audit_database.py  benchmark.py  enrich_jsprav_messengers.py  propagate_messengers.py  seed_crm_contacts.py  seed_crm_templates.py
tests/: test_async_enrichment.py  test_classifier.py  test_crm_api.py  test_dgis_yell_scrapers.py  test_enrichers.py  test_migrations.py  test_pipeline.py  test_refactored_pipeline.py  test_reverse_lookup.py  test_scrapers.py  test_utils.py
(+44 files in other folders)
