[project]
name = "granite-crm-db"
version = "0.1.0"
description = "Granite CRM — пайплайн сбора базы ритуальных мастерских России + FastAPI CRM бэкенд"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0,<2.0",
    "beautifulsoup4>=4.12.0,<5.0",
    "crawlee>=1.6.0",
    "duckduckgo-search",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "loguru>=0.7.0,<1.0",
    "lxml>=5.0.0",
    "playwright>=1.40.0,<2.0",
    "playwright-stealth>=1.0.6,<2.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0,<7.0",
    "rapidfuzz>=3.0,<4.0",
    "requests>=2.31.0,<3.0",
    "rich>=13.0.0,<14.0",
    "sqlalchemy>=2.0,<3.0",
    "tenacity>=8.2.0,<9.0",
    "typer>=0.9.0,<1.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0,<8.0",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=4.0,<5.0",
    "responses>=0.25.0,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as asyncio-based",
]

[tool.ruff]
line-length = 100
target-version = "py312"
